# sabr

./: .gitignore  AGENTS.md  AI_CONTEXT.md  README.md  aiida_bridge.py  app_api.py  app_web.py  ecosystem.config.js  pyproject.toml  run_aiida_dev.py  todo
apps/: README.md
apps/api/: __init__.py  main.py
config/: aiida_presets.yaml  aiida_settings.yaml
config/apps/aiida/: README.md  presets.yaml
config/platform/: README.md
config/specializations/quantumespresso/: aiida_settings.yaml
deprecated/: README.md  run_aiida_dev.py
engines/aiida/: README.md  api.py  brain_factory.py  bridge_client.py  controller.py  deps.py  factory.py  frontend_bridge.py  hub.py  main.py
engines/aiida/ui/: fastui.py  (+2 more)
engines/system_health/: executor.py  web_main.py  web_reporter.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
runtime/: README.md
scripts/: pm2-dev.sh
src/: app_api.py
src/aris_apps/: __init__.py
src/aris_core/: __init__.py
src/aris_legacy/: __init__.py
src/sab_core/: __init__.py  config.py  engine.py  factory.py  logging_utils.py
src/sab_engines/: __init__.py
tests/: __init__.py  test_aiida_agent_prompts.py  test_aiida_bridge_service.py  test_aiida_chat_service.py  test_aiida_module_compat.py  test_aiida_researcher_submission_validation.py  test_aiida_router.py  test_aiida_script_archive.py  test_aiida_service.py  test_aiida_specializations.py  test_aiida_ui_compat.py  test_aiida_worker_client.py  test_aiida_workflow_view.py  test_aris_import_surface.py  test_code.ipynb  test_legacy_layout_compat.py  test_logging_compat.py  test_protocols.py  test_runtime_path_compat.py  test_schema.py
(+242 files in other folders)
