[project]
name = "sab-core"
version = "0.1.0"
description = "Standard Agent Bus — lightweight, decoupled foundational library for AI Agents (Gemini as brain)."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
    "google-genai>=1.0",
    "tenacity>=8.0",
    "psutil>=5.9.0, <6",
    "nicegui>=3.7.1",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
aiida = [
    "aiida-core>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sab_core"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
